--- a/index.html
+++ b/index.html
@@ -15,5 +15,23 @@
       <li>4</li>
       <li>5</li>
     </ul>
+    <main>
+      <article>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae in
+          nemo quae sunt deleniti optio quas incidunt consequuntur magnam, quis,
+          ullam suscipit laboriosam laudantium.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus rem
+          laudantium nemo architecto. Natus eveniet facere voluptates ipsa
+          adipisci id hic tempora veniam neque tempore qui maiores soluta
+          commodi, dolor laborum cumque expedita ad, omnis officiis, odit
+          voluptate quos provident corporis repellendus? A libero similique
+          ipsa. Ipsum error maiores voluptatibus cum. Dolore laborum optio sit
+          pariatur.
+        </p>
+      </article>
+    </main>
   </body>
 </html>
