--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
         </p>
       </article>
     </main>
+    <footer>
+      <a href="#">Lorem ipsum dolor sit amet consectetur.</a>
+    </footer>
   </body>
 </html>
